Update gradle pluginManagement repositories and add my private repo Add tests-manager-plugin with configuration to test